--- a/index.html
+++ b/index.html
@@ -10,4 +10,29 @@
 
 </head>
 
+<body>
+  
+  <section>
+
+    <header>
+      <img src="images/logo.svg" alt="interprise logo">	  
+
+      <h1>A history of everything you copy</h1>
+      <p>Clipboard allows you to track and organize everything you copy. Instantly acess your clipboard on all your devices</p>
+
+        <button type="button">Download for IOS</button>
+        <button type="button">Download for Mac</button>
+
+    </header>
+
+  </section>
+
+  
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer>
+</body>
 </html>
