--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
 
     </div>
 
+    <div class="Clipboard">
+
+      <h2>Acces Clipboard Anywhere</h2>
+      <p>Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks. </p>
+
+      <img src="images/image-devices.png" alt="tablet and iphone devices">
+
+    </div>
+
   </section>
 
   
