div class icon list

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
 
     </div>
 
+    <div class="iconlist">
+      <img src="images/logo-google.png" alt="Google icon">
+      <img src="images/logo-ibm.png" alt="IBM icon">
+      <img src="images/logo-microsoft.png" alt="Microsoft Icon">
+      <img src="images/logo-hp.png" alt="Hewlett Packard icon">
+      <img src="images/logo-vector-graphics.png" alt="Vector Graphics icon">
+
+    </div>
   </section>
 
   
