div class second clipboard

--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
       <img src="images/logo-vector-graphics.png" alt="Vector Graphics icon">
 
     </div>
+
+    <div class="SecondCLipboard">
+
+      <h2>Clipboard for IOS and Mac OS</h2>
+      <p>Available for free on the App Store. Download for Mac or IOS, sync with iCLoud and you're ready to start adding to your clipboard.</p>
+        <button type="button">Download for IOS</button>
+        <button type="button">Download for Mac</button>
+
+    </div>
+
   </section>
 
   
