--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Projeto jU 5</title>
+  <title>Projeto JU 5</title>
 
 </head>
 
